<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.m4rkvzz.pff.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CALCULADORA"
                android:textAlignment="center"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="4dp"
                tools:text="@string/txt_titulo" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Ingrese nota EPR1"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="68dp"
                tools:text="@string/txt_EPR1" />

            <EditText
                android:id="@+id/fl_epr1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="85dp"
                tools:text="@string/fl_epr1" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Ingrese nota EPE1"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="150dp"
                tools:text="@string/txt_EPE1" />

            <EditText
                android:id="@+id/fl_epe1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="167dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Ingrese nota EPR2"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="238dp"
                tools:text="@string/txt_EPR2" />

            <EditText
                android:id="@+id/fl_epr2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="255dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Ingrese nota EPE2"
                android:textAlignment="center"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="320dp"
                tools:text="@string/txt_EPE2" />

            <EditText
                android:id="@+id/fl_epe2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="85dp"
                tools:layout_editor_absoluteY="337dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Ingrese EVA 1"
                android:textAlignment="center"
                tools:text="@string/txt_EVA1" />

            <EditText
                android:id="@+id/fl_eva1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Ingrese EVA 2"
                android:textAlignment="center"
                tools:text="@string/txt_EVA2" />

            <EditText
                android:id="@+id/fl_eva2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Ingrese EVA 3"
                android:textAlignment="center"
                tools:text="@string/txt_EVA3" />

            <EditText
                android:id="@+id/fl_eva3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="Ingrese EVA4"
                android:textAlignment="center"
                tools:text="@string/txt_EVA4" />

            <EditText
                android:id="@+id/fl_eva4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn_calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="sumar"
                android:text="CALCULAR"
                tools:text="@string/btn_calcular" />

            <EditText
                android:id="@+id/fl_prom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Resultado" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cambiarVentana"
                android:text="Volver" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
